properties(log): adjusted properties for more flexible environment

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -35,7 +35,8 @@ appenders = console, file
 
 appender.file.type = File
 appender.file.name = fileLogger
-appender.file.filename = ${sys:ebicsBasePath}/log/ebics.log
+#appender.file.filename = ${sys:ebicsBasePath}/log/ebics.log
+appender.file.filename = ebics.log
 appender.file.layout.type = PatternLayout
 appender.file.layout.pattern = %d %5p - %m%n
 
